--- a/admin.html
+++ b/admin.html
@@ -3,25 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>後台商品管理</title>
+    <title>後台商品管理 - 代採購大平台</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container admin-container">
       <header class="site-header">
         <div class="header-content">
-          <a href="index.html" class="site-logo-link"
-            ><img
+          <a href="index.html" class="site-logo-link">
+            <img
               src="images/logo.png"
               alt="代採購大平台 LOGO"
               class="site-logo"
-          /></a>
+            />
+          </a>
           <nav class="admin-nav">
             <a href="index.html" class="nav-link">回到商店</a>
             <a href="dashboard.html">績效儀表板</a>
-            <a href="admin.html">商品管理</a>
+            <a href="admin.html" class="active">商品管理</a>
             <a href="category-admin.html">分類管理</a>
             <a href="orders-admin.html"
               >訂單管理<span class="notification-badge" id="orders-badge"></span
@@ -40,39 +41,63 @@
       </header>
 
       <main style="margin-top: 40px">
-        <section class="admin-section">
+        <section class="page-section">
           <h2>新增商品</h2>
           <form id="add-product-form" class="admin-form">
-            <div class="form-group">
-              <label for="category">商品分類</label>
-              <select id="category" name="category" required></select>
-            </div>
-            <div class="form-group">
-              <label for="title">商品名稱</label
-              ><input type="text" id="title" name="title" required />
-            </div>
-            <div class="form-group">
-              <label for="price">台幣價格 (已含服務費的最終售價)</label
-              ><input type="number" id="price" name="price" required />
-            </div>
-            <div class="form-group">
-              <label for="serviceFee">代購服務費 (台幣)</label
-              ><input
-                type="number"
-                id="serviceFee"
-                name="serviceFee"
-                value="0"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <label for="imageUrl">圖片網址</label
-              ><input type="text" id="imageUrl" name="imageUrl" required />
+            <div class="form-grid">
+              <div class="form-group">
+                <label for="add-category">商品分類 *</label>
+                <select id="add-category" required></select>
+              </div>
+              <div class="form-group">
+                <label for="add-title">商品名稱 *</label>
+                <input type="text" id="add-title" required />
+              </div>
+              <div class="form-group">
+                <label for="add-price">台幣價格 (最終售價) *</label>
+                <input type="number" id="add-price" required />
+              </div>
+              <div class="form-group">
+                <label for="add-serviceFee">代購服務費 (台幣)</label>
+                <input type="number" id="add-serviceFee" value="0" required />
+              </div>
+              <div class="form-group">
+                <label for="add-stock">庫存數量</label>
+                <input type="number" id="add-stock" value="0" />
+              </div>
+              <div class="form-group">
+                <label for="add-status">商品狀態</label>
+                <select id="add-status">
+                  <option value="published">上架</option>
+                  <option value="draft">草稿</option>
+                </select>
+              </div>
+              <div class="form-group full-width">
+                <label for="add-imageUrl">圖片網址 *</label>
+                <input type="text" id="add-imageUrl" required />
+              </div>
+              <div class="form-group full-width">
+                <label for="add-tags">商品標籤 (用逗號 , 分隔)</label>
+                <input
+                  type="text"
+                  id="add-tags"
+                  placeholder="例如: 藍牙耳機,降噪,Pro 2"
+                />
+              </div>
+              <div class="form-group full-width">
+                <label for="add-longDescription">商品詳細描述</label>
+                <textarea
+                  id="add-longDescription"
+                  rows="8"
+                  placeholder="輸入商品的詳細介紹、規格、使用方式等..."
+                ></textarea>
+              </div>
             </div>
             <button type="submit" class="btn-primary">確認新增</button>
           </form>
         </section>
-        <section class="admin-section">
+
+        <section class="page-section">
           <div class="section-header">
             <h2>現有商品列表</h2>
             <button
@@ -88,12 +113,12 @@
             <table class="admin-table data-table">
               <thead>
                 <tr>
-                  <th>ID</th>
                   <th>分類</th>
                   <th>名稱</th>
                   <th>最終售價</th>
-                  <th>服務費</th>
-                  <th>操作</th>
+                  <th>庫存</th>
+                  <th>狀態</th>
+                  <th style="width: 15%">操作</th>
                 </tr>
               </thead>
               <tbody id="product-list-body"></tbody>
@@ -102,36 +127,59 @@
         </section>
       </main>
     </div>
+
     <div id="edit-modal" class="modal">
       <div class="modal-content">
         <span class="modal-close-btn">&times;</span>
         <h2>編輯商品</h2>
         <form id="edit-product-form" class="admin-form">
           <input type="hidden" id="edit-product-id" />
-          <div class="form-group">
-            <label for="edit-category">商品分類</label>
-            <select id="edit-category" required></select>
-          </div>
-          <div class="form-group">
-            <label for="edit-title">商品名稱</label
-            ><input type="text" id="edit-title" required />
-          </div>
-          <div class="form-group">
-            <label for="edit-price">台幣價格 (最終售價)</label
-            ><input type="number" id="edit-price" required />
-          </div>
-          <div class="form-group">
-            <label for="edit-serviceFee">代購服務費 (台幣)</label
-            ><input type="number" id="edit-serviceFee" required />
-          </div>
-          <div class="form-group">
-            <label for="edit-imageUrl">圖片網址</label
-            ><input type="text" id="edit-imageUrl" required />
+          <div class="form-grid">
+            <div class="form-group">
+              <label for="edit-category">商品分類 *</label>
+              <select id="edit-category" required></select>
+            </div>
+            <div class="form-group">
+              <label for="edit-title">商品名稱 *</label>
+              <input type="text" id="edit-title" required />
+            </div>
+            <div class="form-group">
+              <label for="edit-price">台幣價格 (最終售價) *</label>
+              <input type="number" id="edit-price" required />
+            </div>
+            <div class="form-group">
+              <label for="edit-serviceFee">代購服務費 (台幣)</label>
+              <input type="number" id="edit-serviceFee" required />
+            </div>
+            <div class="form-group">
+              <label for="edit-stock">庫存數量</label>
+              <input type="number" id="edit-stock" />
+            </div>
+            <div class="form-group">
+              <label for="edit-status">商品狀態</label>
+              <select id="edit-status">
+                <option value="published">上架</option>
+                <option value="draft">草稿</option>
+              </select>
+            </div>
+            <div class="form-group full-width">
+              <label for="edit-imageUrl">圖片網址 *</label>
+              <input type="text" id="edit-imageUrl" required />
+            </div>
+            <div class="form-group full-width">
+              <label for="edit-tags">商品標籤 (用逗號 , 分隔)</label>
+              <input type="text" id="edit-tags" />
+            </div>
+            <div class="form-group full-width">
+              <label for="edit-longDescription">商品詳細描述</label>
+              <textarea id="edit-longDescription" rows="8"></textarea>
+            </div>
           </div>
           <button type="submit" class="btn-primary">儲存變更</button>
         </form>
       </div>
     </div>
+
     <script src="js/admin-main.js" defer></script>
     <script src="js/admin.js" defer></script>
   </body>
